--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <i class="fa-solid fa-bell"></i>
         <i class="fa-solid fa-user"></i>
       </div>
+      <div class="navbar__s4">
+        <i class="fa-solid fa-bars"></i>
+      </div>
     </div>
 
     <!-- Categories -->
